--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -2,13 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
 
-div#root {
-    position:relative;
+#myVideo {
+    height:100vh;
 }
 
 body {
     margin: 0;
-    background-color:#f8f8f8;
+    background-color:#fff;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -22,60 +22,58 @@ body {
 div.main {
     margin:0 auto;
     width:90%;
-    padding:10px;
 }
 
-div#header {
-    text-shadow: 1px 1px 2px #000;
+div.header {
     position:sticky;
     top:0;
     display: flex;
-    z-index:999;
+    z-index: 999;
     flex-direction: row;
-    flex-wrap:wrap;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: stretch;
-    color: #fff;
-    font-weight:100;
-    background-color:#000;
+    justify-content: space-between;
+    background-color:rgb(255, 255, 255);
     top: 0;
     width: 100%;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.10);
+    border-bottom:1px solid #dedede;
+    /*box-shadow: 0 5px 15px rgba(0, 0, 0, 0.10);*/
 }
 
-div#logo {
-    padding-left: 100px;
-    padding-top: 30px;
-}
-
-div#logo a {
-    color: white;
+div.logo-text a {
+    color:inherit;
+    font-weight: 700;
+    letter-spacing: -0.5px;
     text-decoration: none;
+    padding: 0 10px;
 }
 
-div#navbar {
-    padding-right: 100px;
+div.logo-emblem img {
+    height:75px;
 }
 
-div#navbar ul {
+div.nav ul {
     list-style-type: none;
     display: flex;
+    margin:0;
+    padding:0;
 }
 
-div#navbar li {
+div.nav li {
     flex: auto;
-    padding: 15px;
+    padding: 10px;
     transition: 0.3s;
 }
 
-div#navbar li a {
-    color: #fff;
+div.nav li a {
+    color: inherit;
     text-decoration: none;
     position: relative;
     transition: 0.3s;
+    font-weight: 200;
 }
 
-div#navbar li a::before {
+div.nav li a::before {
     content: "";
     position: absolute;
     display: block;
@@ -84,36 +82,50 @@ div#navbar li a::before {
     height: 1px;
     bottom: 0;
     left: 0;
-    background-color: #fff;
+    background-color: #000;
     transform: scaleX(0);
     transition: transform 0.3s ease;
 }
 
-div#navbar li a:hover::before {
+div.nav li a:hover::before {
     transform: scaleX(1);
 }
 
-div#navbar li#login {
-    border: 0.5px solid #fff;
-    border-radius: 3px;
-    transition: 0.3s;
+div.left {
+    display:flex;
+    align-items: center;
+    padding-left:5vh;
 }
 
-div#navbar li#login:hover {
-    background-color: #fff;
+div.right {
+    display:flex;
+    align-items: center;
+    padding-right:5vh;
 }
 
-div#navbar li#login:hover a {
-    color: #000;
-    text-shadow: none;
+button#login {
+    background:transparent;
+    border:1px solid #000;
+    border-radius:50px;
+    padding:7px 16px;
+    color:#000;
+    box-shadow:none;
+}
+
+button#sign-up {
+    background:#000;
+    border-radius:50px;
+    padding:7px 16px;
+    color:#fff;
+    box-shadow:none;
 }
 
 div#infobar {
-    background-color:#dedede;
+    background-color:#fff;
     color:#000;
     width:100%;
     padding:5px;
-    border-top:1px solid rgb(117, 117, 117);
+    border-bottom:1px solid #dedede;
     color:rgb(117, 117, 117);
     text-shadow:none;
     text-align:center;
@@ -154,11 +166,7 @@ div.dropdown-content a:hover {
     color:rgb(255, 255, 255);
     transition: 0.3s;
 }
-  
-div.dropdown:hover div#icon {
-    transform:rotate(90deg);
-    transition: 0.3s;
-}
+
 div.dropdown:hover div.dropdown-content {
     display:block;
 }
@@ -288,7 +296,6 @@ div#content {
 
 input[type="text"], input[type="email"], select, input[type="number"], input[type="password"], input[type="submit"]  {
     border:0;
-    background-color:transparent;
     border-bottom:1px solid #d4d4d4;
     font-family:'Poppins', sans-serif;
     font-weight:200;
@@ -313,7 +320,7 @@ button {
     border:0;
     background-color:#337ab7;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-    font-family:'Noto Sans JP', sans-serif;
+    font-family:'Poppins', sans-serif;
     padding:10px;
     color:white;
     margin:2px;
