--- a/frontend/src/styles/members.css
+++ b/frontend/src/styles/members.css
@@ -18,7 +18,6 @@ div.members-container div.card {
     flex-direction: column;
     flex-basis:100%;
     max-width:20%;
-    margin:5px;
     transition:0.3s;
     text-align: center;
 }
@@ -61,8 +60,7 @@ div.profile div.description {
 div.profile div.card {
     padding:30px;
     margin:15px;
-    min-width:33%;
-    box-shadow:0 5px 15px rgb(0 0 0 / 10%);
+    width:50%;
     background-color: rgb(255, 255, 255);
-    border-bottom:5px solid #22537e;
+    border:1px solid #dedede;
 }
