--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,15 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-#myVideo {
-    height:100vh;
+:root {
+    --primary-color:#337ab7;
+    --primary-color-darkened:#225079;
+    --secondary-color:#252525;
+    --background-color:#fff;
+    --default-font:'Heebo', sans-serif;
+    --serif-font:'STIX Two Text', serif;
+    --weight-thin:200;
+    --weight-thick:700;
+    --box-shadow-thin: 0 5px 15px rgba(0, 0, 0, 0.15);
 }
 
 body {
     margin: 0;
-    background-color:#fff;
-    font-family: 'Poppins', sans-serif;
+    background-color: var(--background-color);
+    font-family: var(--default-font);
 }
 
 #wrapper {
@@ -36,13 +45,12 @@ div.header {
     background-color:rgb(255, 255, 255);
     top: 0;
     width: 100%;
-    border-bottom:1px solid #dedede;
-    /*box-shadow: 0 5px 15px rgba(0, 0, 0, 0.10);*/
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.10);
 }
 
 div.logo-text a {
     color:inherit;
-    font-weight: 700;
+    font-weight: var(--weight-thick);
     letter-spacing: -0.5px;
     text-decoration: none;
     padding: 0 10px;
@@ -66,11 +74,10 @@ div.nav li {
 }
 
 div.nav li a {
-    color: inherit;
+    color:inherit;
     text-decoration: none;
     position: relative;
     transition: 0.3s;
-    font-weight: 200;
 }
 
 div.nav li a::before {
@@ -162,7 +169,7 @@ div.dropdown-content a {
 }
 
 div.dropdown-content a:hover {
-    background-color: #2e6da4;
+    background-color: var(--primary-color-darkened);
     color:rgb(255, 255, 255);
     transition: 0.3s;
 }
@@ -191,6 +198,15 @@ div.success-message {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
 }
 
+div.primary {
+    text-align: center;
+}
+
+div.primary h1 {
+    font-family: 'Playfair Display', serif;
+    font-size:2.5rem;
+}
+
 div.loading-text {
     font-size:25px;
     padding:50px;
@@ -207,7 +223,7 @@ animation: spinner 1s linear infinite;
 
 a.button {
     display: inline-block;
-    background-color: #337ab7;
+    background-color: var(--primary-color);
     border-color: #2e6da4;
     padding: 10px 16px;
     color: white;
@@ -217,7 +233,7 @@ a.button {
 }
 
 a.button:hover {
-    background-color: #225079;
+    background-color: var(--primary-color-darkened);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
 } 
 
@@ -297,30 +313,30 @@ div#content {
 input[type="text"], input[type="email"], select, input[type="number"], input[type="password"], input[type="submit"]  {
     border:0;
     border-bottom:1px solid #d4d4d4;
-    font-family:'Poppins', sans-serif;
+    font-family:var(--default-font);
     font-weight:200;
     transition:0.3s;
 }
 
 input[type="text"]:hover, input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="submit"]:hover {
-    border-bottom:1px solid #225079;
+    border-bottom:1px solid var(--primary-color-darkened);
 }
 
 textarea {
     border:1px solid #dedede;
-    font-family: inherit;
+    font-family:var(--default-font);
     transition:0.3s;
 }
 
 textarea:hover {
-    border:1px solid #225079;
+    border:1px solid var(--primary-color-darkened);
 }
 
 button {
     border:0;
-    background-color:#337ab7;
+    background-color: var(--primary-color);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-    font-family:'Poppins', sans-serif;
+    font-family:var(--default-font);
     padding:10px;
     color:white;
     margin:2px;
@@ -328,7 +344,7 @@ button {
 }
 
 button:hover {
-    background-color: #225079;
+    background-color: var(--primary-color-darkened);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
 }
 
