--- a/client/src/styles/auth.css
+++ b/client/src/styles/auth.css
@@ -1,37 +1,92 @@
 div.auth-container {
     display: flex;
     flex-direction: row;
-    height: 100vh;
 }
  
-
 div.auth-container div.left {
-    width: 30%;
+    width: 50%;
 }
 
 div.auth-container div.right {
-    width: 100%;
-    background-image: url("../images/auth.jpg");
+    width:50%;
+    background-image: url("../images/background-15343.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    height: 100vh;
 }
 
-div.auth-form {
-    margin: 25px auto;
-    padding:10px;
-    background-color: #fff;
-    border-radius:3px;
-    text-align:center;
-    font-weight:100;
+div.tds-login-form-wrapper {
+    position: relative;
+    top:20vh;
 }
 
-div.auth-form a {
+div.tds-register-form-wrapper {
+    position: relative;
+    top:10vh;
+}
+
+div.tds-form {
+    margin:0 auto;
+    font-size:14px;
+    width:50%;
+}
+
+div.tds-form-item {
+    margin-bottom:10px;
+}
+
+div.tds-form a {
     text-decoration: none;
-    color:#22537e;
+    color: var(--primary-color);
+    transition: 0.3s;
 }
 
-div.auth-form h1 {
+div.tds-form a:hover {
+    color: var(--primary-color-darkened);
+}
+
+div.tds-form h1 {
     background: -webkit-linear-gradient(0.15turn, #286091, #42a2f7);
     -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
+     text-align: center;
+}
+
+div.tds-form input[type="email"], div.tds-form input[type="password"],
+div.tds-form input[type="text"], div.tds-form input[type="number"],
+div.tds-form select {
+    border:1px solid var(--outline-color);
+    font-weight:400;
+    width: -moz-available;          
+    width: -webkit-fill-available;
+    width: fill-available;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: 14px;
+}
+
+div.tds-form button {
+    width:100%;
+    border-radius:50px;
+    margin-bottom:10px;
+    background: linear-gradient(0.85turn, var(--primary-color-darkened), var(--primary-color-lightened));
+}
+
+div.tds-form label {
+    font-weight:normal;
+    font-size: 14px;
+}
+
+div.auth-container .exit  {
+    color:var(--primary-color-darkened);
+    position: absolute;
+    top:7px;
+    left:10px;
+    font-size:25px;
+}
+
+div.auth-container div.copyright  {
+    color: var(--secondary-color);
+    margin-top: 15px;
+    font-size: 12px;
 }
